8356693: AOT assembly phase fails with -javaagent