src/hotspot/share/cds/cdsConfig.cpp
@@ -434,8 +434,6 @@ void CDSConfig::check_aot_flags() {
 
   // This is an old flag used by CDS regression testing only. It doesn't apply
   // to the AOT workflow.
-  // JVMTI can be specified with all legal AOTModes. However, they are igored
-  // when AOTMode==create.
   FLAG_SET_ERGO(AllowArchivingWithJavaAgent, false);
 }
 
@@ -488,7 +486,13 @@ void CDSConfig::check_aotmode_create() {
 
   CDSConfig::enable_dumping_static_archive();
 
-  // We don't ...
+  // We don't load any agents in the assembly phase, so we can ensure that the agents
+  // cannot affect the contents of the AOT cache. E.g., we don't want the agents to
+  // redefine any cached classes. We also don't want the agents to modify heap objects that
+  // are cached.
+  //
+  // Since application is not executed in the assembly phase, there's no need to load
+  // the agents anyway -- no one will notice that the agents are not loaded. 
   JvmtiAgentList::disable_agent_list();
 }
 
